Fixing height of navigation to align with the slideshow.

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -124,7 +124,7 @@ body {
 }
 
 .sticky-nav-wrapper {
-  height: 7.7em;
+  height: 7.8em;
   @media #{$medium-down} { display: none; }
 }
 
